Various display fixes
#forms.scss
- removed auto overflow from form-actions as it was generating undesired vertical scrollbars

#input-groups.scss
- added custom .btn-xs as BS4 removed the extra-small button class

#resource_edit_base.html
- fixed an issue with breadcrumbs not generating properly when edting resources

#resources.html
- removed a random o character

#dashbaord.html, page.html
- fixed display issue on extra-large displays where module was not taking up the whole column space (by adding "no-gutters" and "col-12")

--- a/ckan/public/base/scss/_forms.scss
+++ b/ckan/public/base/scss/_forms.scss
@@ -111,10 +111,6 @@ textarea {
   }
 }
 
-.form-actions {
-  overflow: auto;
-}
-
 @include media-breakpoint-up(sm) {
   .form-actions {
     text-align: right;
