--- a/ckan/public/base/scss/_input-groups.scss
+++ b/ckan/public/base/scss/_input-groups.scss
@@ -9,3 +9,10 @@
     border-color: #ced4da;
   }
 }
+
+.btn-group-xs > .btn, .btn-xs {
+  padding: .25rem .4rem;
+  font-size: .875rem;
+  line-height: .5;
+  border-radius: .2rem;
+}
